automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,14 @@
+<h1>THIS IS YOUR TEAM</h1>
 
+<div class="team">
+  <h1> <%= @team_name %></h1>
+  <h2>Team Motto: <%= @team_motto %></h2>
+</div>
 
-
+<% @members.each do |member| %>
+  <div class="member">
+    <h2>Hero Name: <%= member.name %></h2><br>
+    <h2>Hero Power: <%= member.power %></h2><br>
+    <h2>Hero Bio: <%= member.bio %></h2>
+  </div><br>
+<% end %>
