automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,7 +5,7 @@
   <h2>Team Motto: <%= @team_motto %></h2>
 </div>
 
-<% @team_members.each.with_index do |hero| %>
+<% @team_members.each.with_index do |hero, index| %>
   <h2>Hero Name: <%= @hero_name[index] %></h2><br>
   <h2>Hero Power: <%= @hero_power[index] %></h2><br>
   <h2>Hero Bio: <%= @hero_bio[index] %></h2>
