--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -7,6 +7,6 @@
 
 <% @team_members.each_with_index do |hero, index| %>
   <h2>Hero Name: <%= @hero_name[index] %></h2>
-  <h2>Hero Power: <%= @hero_power[index] %></h2>
-  <h2>Hero Bio: <%= @hero_bio[index] %></h2>
+  <p>Hero Power: <%= @hero_power[index] %></p>
+  <p>Hero Bio: <%= @hero_bio[index] %></p>
 <% end %>
