automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,5 +8,5 @@
 <% @team_members.each_with_index do |hero, index| %>
   <h2>Hero Name: <%= @hero_name[index] %></h2>
   <p>Hero Power: <%= @hero_power[index] %></p>
-  <p>Hero Bio: <%= @hero_bio[index] %></p>
+  <p>Hero Biography: <%= @hero_bio[index] %></p>
 <% end %>
